--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "rq4"
 version = "0.1.0"
-description = "Add your description here"
+description = "rq = reqman4 (prototype)"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
