--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "click>=8.2.1",
     "colorama>=0.4.6",
     "httpx>=0.28.1",
+    "python-dotenv>=1.1.1",
     "pyyaml>=6.0.2",
 ]
 
