--- a/examples/ko/call_resolv_bad2_params.yml
+++ b/examples/ko/call_resolv_bad2_params.yml
@@ -1,14 +1,12 @@
 #ERROR: params must be a list of dict
 host: http://test
 
-mylist:
-  - 1
-  - 2
-
-RUN:
-
+PROC:
   - GET: /testdict?a=<<a>>
     tests:
       - $status == 200
-    params: <<mylist>>
+
+RUN:
+  - call: PROC
+    params: mylist
 
