--- a/examples/ko/http_resolv_bad2_params.yml
+++ b/examples/ko/http_resolv_bad2_params.yml
@@ -1,14 +1,10 @@
 #ERROR: params must be a list of dict
 host: http://test
 
-mylist:
-  - 1
-  - 2
-
 RUN:
 
   - GET: /testdict?a=<<a>>
     tests:
       - $status == 200
-    params: <<mylist>>
+    params: mylist
 
