"$" things ... replaced by "R." things

--- a/examples/ko/call_resolv_unknown_params.yml
+++ b/examples/ko/call_resolv_unknown_params.yml
@@ -5,7 +5,7 @@ host: http://test
 PROC:
   - GET: /testdict?a=<<a>>
     tests:
-      - $status == 200
+      - R.status == 200
 
 RUN:
   - call: PROC
