--- a/examples/ko/call_resolv_bad2_params.yml
+++ b/examples/ko/call_resolv_bad2_params.yml
@@ -4,7 +4,7 @@ host: http://test
 PROC:
   - GET: /testdict?a=<<a>>
     tests:
-      - $status == 200
+      - R.status == 200
 
 RUN:
   - call: PROC
