--- a/examples/real.yml
+++ b/examples/real.yml
@@ -1,13 +1,13 @@
 RUN:
   - GET: https://tools-httpstatus.pickup-services.com/500
-    doc: this is the documentation of the test ... result is <b><i><<$status>></i></b>
+    doc: this is the documentation of the test ... result is <b><i><<R.status>></i></b>
     tests:
-     - $status == 500
+     - R.status == 500
 
   - GET: https://tools-httpstatus.pickup-services.com/200
     doc: this is the documentation of the test
     tests:
-     - $status == 200
+     - R.status == 200
 
   - POST: https://tools-httpstatus.pickup-services.com/201
     doc: this is the documentation of the test
@@ -16,5 +16,5 @@ RUN:
         id: 42
         label: toto
     tests:
-     - $status == 201
-     - $status == 202
+     - R.status == 201
+     - R.status == 202
