--- a/examples/real.yml
+++ b/examples/real.yml
@@ -1,16 +1,18 @@
 RUN:
   - GET: https://tools-httpstatus.pickup-services.com/500
-    doc: this is the documentation of the test ... result is <b><i><<R.status>></i></b>
+    doc: this is the documentation of the test ... time in ms = <b><i><<R.time>></i></b>
     tests:
      - R.status == 500
+     - R.time < 500
 
   - GET: https://tools-httpstatus.pickup-services.com/200
-    doc: this is the documentation of the test
+    doc: this is the documentation of the test ... time in ms = <b><i><<R.time>></i></b>
     tests:
      - R.status == 200
+     - R.time < 500
 
   - POST: https://tools-httpstatus.pickup-services.com/201
-    doc: this is the documentation of the test
+    doc: this is the documentation of the test ... time in ms = <b><i><<R.time>></i></b>
     body:
       item:
         id: 42
@@ -18,3 +20,4 @@ RUN:
     tests:
      - R.status == 201
      - R.status == 202
+     - R.time < 500
