rename host: --> root: (like reqman)

--- a/examples/classic/reqman.conf
+++ b/examples/classic/reqman.conf
@@ -1,15 +1,15 @@
-host: http://test
+root: http://test
 
 switch:
   env1:
     doc: for dev
-    host: http://dev/
+    root: http://dev/
 
   env2:
     doc: for verification
-    host: http://verification/
+    root: http://verification/
 
   env3:
     doc: for validation
-    host: http://validation/
+    root: http://validation/
 
