--- a/examples/real.yml
+++ b/examples/real.yml
@@ -16,7 +16,9 @@ RUN:
      - R.time < 500
 
   - POST: https://tools-httpstatus.pickup-services.com/201
-    doc: this is the documentation of the test ... time in ms = <b><i><<R.time>></i></b>
+    doc: |
+      this is the documentation of the test ... time in ms = <b><i><<R.time>></i></b>
+      <p>Got a False Test ! (to test ;-))</p>
     body:
       item:
         id: 42
@@ -36,13 +38,15 @@ RUN:
       - R.status == 0   
       - R.text == ""
       - R.content == b""
+      - 0 < R.time < 100
 
-  - GET: httpsunknownnnxsqcsqd.com/toto
+  - GET: https:/unknownnnxsqcsqd.com/toto
     doc: Test <<color('ResponseInvalid')>>
     tests:
       - R.status == 0    
       - R.text == ""
       - R.content == b""
+      - 0 < R.time < 10
          
   - GET: https://tools-httpstatus.pickup-services.com/200?sleep=1000
     doc: Test <<color('ResponseTimeout')>>
@@ -50,5 +54,6 @@ RUN:
       - R.status == 0        
       - R.text == ""
       - R.content == b""
+      - 500 < R.time < 1000
     params:
       - timeout: 500
