--- a/examples/real.yml
+++ b/examples/real.yml
@@ -34,6 +34,19 @@ RUN:
       - R.status == 404
       - R.headers.server == "pickup-webserver"
 
+  - GET: https://tools-httpstatus.pickup-services.com/200?sleep=1000
+    doc: Test <<color('ResponseTimeout')>>, with a timeout=<<timeout>>ms
+    tests:
+      - R.status == 0        
+      - R.text == ""
+      - R.content == b""
+      - not R.headers
+      - timeout < R.time < 1000
+      - "'timeout' in locals()"      
+    params:
+      - timeout: 500 #ms
+
+
   - GET: https://unknownnnxsqcsqd.com/toto
     doc: Test <<color('ResponseUnreachable')>>
     tests:
@@ -42,6 +55,7 @@ RUN:
       - R.content == b""
       - not R.headers
       - 0 < R.time < 100
+      - "'timeout' not in locals()"
 
   - GET: https:/unknownnnxsqcsqd.com/toto
     doc: Test <<color('ResponseInvalid')>>
@@ -51,14 +65,4 @@ RUN:
       - R.content == b""
       - not R.headers
       - 0 < R.time < 10
-         
-  - GET: https://tools-httpstatus.pickup-services.com/200?sleep=1000
-    doc: Test <<color('ResponseTimeout')>>, with a timeout=<<timeout>>ms
-    tests:
-      - R.status == 0        
-      - R.text == ""
-      - R.content == b""
-      - not R.headers
-      - timeout < R.time < 1000
-    params:
-      - timeout: 500 #ms
+      - "'timeout' not in locals()"         
