--- a/examples/real.yml
+++ b/examples/real.yml
@@ -67,8 +67,8 @@ RUN:
       - 0 < R.time < 10
       - "'timeout' not in locals()"         
 
-  # - GET: "https://tools-httpstatus.pickup-services.com/<<i>>"
-  #   doc: ... <<i>> ... 
-  #   tests:
-  #    - R.status == i
-  #   params: <<[dict(i=j) for j in range(201,206)]>>
+  - GET: "https://tools-httpstatus.pickup-services.com/<<xxx>>"
+    doc: ... xxx == <<xxx>> ... 
+    tests:
+     - R.status == xxx
+    params: <<[dict(xxx=j) for j in range(201,209)]>>
