fix scenar in reqman.conf

--- a/examples/classic/reqman.conf
+++ b/examples/classic/reqman.conf
@@ -1,5 +1,10 @@
 root: http://test
 
+SCENAR:
+  - GET: /test?json=[1,2,3]
+    tests:
+      - len(R.json) == 3
+
 switch:
   env1:
     doc: for dev
