--- a/examples/single/test_switch.yml
+++ b/examples/single/test_switch.yml
@@ -1,8 +1,13 @@
 #! --env2
 root: http://test
 
-METHOD: |
+get3: |
   return 3
+
+SCENAR:
+  - GET: /test?json=[1,2,3]
+    tests:
+      - len(R.json) == 3
 
 switch:
   env1:
@@ -20,6 +25,8 @@ switch:
 
 RUN:
 
+  - call: SCENAR
+
   - GET: /test?json=[1,2,3]
     tests:
-      - len(R.json) == METHOD()
+      - len(R.json) == get3()
