--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ rq = "main:main"
 
 [dependency-groups]
 dev = [
+    "jsonschema>=4.25.1",
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
     "pytest-cov>=6.2.1",
