BEGIN & END proc are enabled !

--- a/examples/classic/reqman.conf
+++ b/examples/classic/reqman.conf
@@ -8,6 +8,33 @@ SCENAR:
 get3: |
   return 3
 
+BEGIN:
+
+  - set:
+      string: 'x'
+      integer: 1
+
+  - GET: /test?json={"step":"begin"}
+    tests:
+      - R.json.step == 'begin'
+      - string == 'x'
+      - integer == 1
+
+  - set:
+      string: <<string +"x">>
+      integer: <<integer + 1>>
+
+END:
+  - set:
+      string: <<string +"x">>
+      integer: <<integer + 1>>
+
+  - GET: /test?json={"step":"end"}
+    tests:
+      - R.json.step == 'end'
+      - string == 'xxx'
+      - integer == 3
+
 
 switch:
   env1:
