--- a/.github/workflows/publish_on_pypi.yml
+++ b/.github/workflows/publish_on_pypi.yml
@@ -9,7 +9,7 @@
 name: Upload Python Package
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # to be able to test manually on github/actions
   release:
     types: [published]
 
