--- a/.github/workflows/publish_on_pypi.yml
+++ b/.github/workflows/publish_on_pypi.yml
@@ -9,9 +9,9 @@
 name: Upload Python Package
 
 on:
-  workflow_dispatch:  # to be able to test manually on github/actions
-  release:
-    types: [published]
+  # workflow_dispatch:  # to be able to test manually on github/actions
+  # release:
+  #   types: [published]
   push:
     tags:
       - "v*.*.*"
