better controls attributes on call & http

--- a/examples/err/http_bad_step.yml
+++ b/examples/err/http_bad_step.yml
@@ -1,10 +1,10 @@
-#ERROR: unknown attributs
+#ERROR: unknowns http'attributes
 root: http://test
 
 RUN:
 
   - GET: /testdict?a=<<a>>
-    query: yo
+    query: yo                   # <- NO "query" or others
     tests:
       - R.status == 200
 
