--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "Run reqman scenario (yml/rml)",
             "type": "shell",
-            "command": "uv run rq -i ${file}",
+            "command": "uv run rq -i \"${file}\"",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
