rename set->SET, call-> CALL

--- a/examples/classic/reqman.conf
+++ b/examples/classic/reqman.conf
@@ -10,7 +10,7 @@ get3: |
 
 BEGIN:
 
-  - set:
+  - SET:
       string: 'x'
       integer: 1
 
@@ -20,12 +20,12 @@ BEGIN:
       - string == 'x'
       - integer == 1
 
-  - set:
+  - SET:
       string: <<string +"x">>
       integer: <<integer + 1>>
 
 END:
-  - set:
+  - SET:
       string: <<string +"x">>
       integer: <<integer + 1>>
 
