--- a/examples/err/bad_call_attributes2.yml
+++ b/examples/err/bad_call_attributes2.yml
@@ -11,7 +11,7 @@ PROC:
       - R.status == 200
 
 RUN:
-  - call: PROC
+  - CALL: PROC
     params: <<mylist>>
     doc: "no doc in call"                 # <- no more possible !!!
       
