--- a/examples/ok/multiple_params2.yml
+++ b/examples/ok/multiple_params2.yml
@@ -15,7 +15,7 @@ PROC:
     params: <<[dict(n=i) for i in R.json]>>
 
 RUN:
-  - call: PROC
+  - CALL: PROC
     params:
       - retry: 1
       - retry: 2
