--- a/scenario.yml
+++ b/scenario.yml
@@ -66,7 +66,7 @@ RUN:                                                # <- this declare the scenar
     params: []     # this http verb will never be called, because empty list
 
   #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-  - call: SUB_SCENAR
+  - CALL: SUB_SCENAR
   #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
