repo relayout (to have a folder)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,12 @@ dependencies = [
 [tool.uv]
 package = true
 
+[build-system]
+requires = ["uv_build>=0.8.15,<0.9.0"]
+build-backend = "uv_build"
+
 [project.scripts]
-rq = "main:main"
+rq = "reqman4.main:main"
 
 [project.urls]
 Homepage = "https://github.com/manatlan/reqman4"
