--- a/examples/ok/headers_inherited_from_env.yml
+++ b/examples/ok/headers_inherited_from_env.yml
@@ -1,3 +1,4 @@
+#! -o
 # press CTRL+F5 to run this scenario with current py/repo (under vscode)
 
 headers:
@@ -6,6 +7,10 @@ headers:
 RUN:
   - GET: http://test/headers
     tests:
+
     - R.status == 200
     - R.json.headers["user-agent"] == "me"  #\__ theses headers are not case-insensitive, because
     - R.json.headers.user_agent == "me"     #/   they are just dict/json from an ehttp mock !(it's not real headers)
+
+    - R.headers["ContENT-Type"] == "application/json" #\__ theses are real ones
+    - R.headers.cONtent_TYPE == "application/json"    #/
