evol: SET raise error now ! (var needs to be resolved)

--- a/examples/reals/jsonplaceholder_scenario.yml
+++ b/examples/reals/jsonplaceholder_scenario.yml
@@ -1,5 +1,8 @@
 #!
 #RESULT: 6/6
+
+timeout: 10_000 # 10sec max
+
 RUN:
   - doc: "Get all posts"
     GET: "https://jsonplaceholder.typicode.com/posts"
