--- a/examples/reals/real.yml
+++ b/examples/reals/real.yml
@@ -1,6 +1,8 @@
 #RESULT: 34/35
 # this is a real test, need access to the internet !
 
+timeout: 10_000 # 10sec max
+
 color:
   return f"<b style='color:orange'>{x}</b>"
 
