--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "httpx>=0.28.1",
     "pyjwt>=2.10.1",
     "python-dotenv>=1.1.1",
-    "pyyaml>=6.0.2",
+    "ruamel-yaml>=0.18.15",
 ]
 
 [tool.uv]
