compatibility is coming

--- a/examples/reqman3/minimal_compat.yml
+++ b/examples/reqman3/minimal_compat.yml
@@ -1,8 +1,8 @@
 # test scenar as list
 
+- SET:
+    root: http://test
+    
 - GET: /test
   tests:
     - R.status == 200
-  params:
-    - root: http://test
-  
