--- a/examples/classic/reqman.yml
+++ b/examples/classic/reqman.yml
@@ -36,16 +36,15 @@ END:
       - integer == 3
 
 
-switch:
-  env1:
+--env1:
     doc: for dev
     root: http://dev/
 
-  env2:
+--env2:
     doc: for verification
     root: http://verification/
 
-  env3:
+--env3:
     doc: for validation
     root: http://validation/
 
